
	* Fixed bug #16599: Radio Selector for content to show on mount pages not displaying the selected value, credits Joh Hasenau
	* Fixed issue #16389: Inconsistent styling of the DB integrity checks overview
	* Fixed issue #16764: Insufficient information about which class is failing to implement interfaces in tslib_cObj->start()

2010-12-17  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #14303: t3lib_compressor causes filemtime errors on files in fileadmin directory (Thanks to Rens Admiraal)
	* Fixed bug #16096 Bug: addToAllTCATypes after certain fields does not work anymore (Thanks to Jo Hasenau)
	* Fixed bug #14500: Bug: Unit test failures in t3lib_matchCondition_backend_testcase (Thanks to Oliver Klee)
	* Fixed bug #16738: Add ExtDirect Stateprovider for ExtJs States
	* Fixed bug #16706: Use ExtJS for collapseable sections like in reports module
	* Fixed bug #15686: Call the list module through the dispatcher instead directly (Thanks to Helmut Hummel)
	* Fixed bug #16735: Inclusion of js/css for loadResourcesForRegisteredNavigationComponents lacks loading order
	* Fixed bug #16084: Clicking a label should set the focus on the input field

2010-12-17  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #16725: Wrong translation markers in Content Element Image (Thanks to Thomas Kieslich)
	* Fixed bug #14564: Width of one text paragraph in the Install Tool is too big (Thanks to Marc Wöhlken)
	* Fixed bug #16758: Fix space beetween page tree nodes

2010-12-17  Francois Suter  <francois.suter@typo3.org>

	* Fixed bug #16751: Uninitialized variable triggers exception in Update wizard
	* Fixed bug #16766: Scheduler: Uninitialized variable triggers warning in BE module

2010-12-17  Jigal van Hemert <jigal@xs4all.nl>

	* Fixed bug #16724: List Module -> field selector: the table has a wrong background color in current trunk (thanks to Peter Foerger)

2010-12-16  Jigal van Hemert <jigal@xs4all.nl>
